# software-python-base

./: .gitlab-ci.yml  CLAUDE.md  pyproject.toml  readme.md
