[project]
name = "python-base"
version = "1.0.0-beta"
requires-python = "==3.13.2"
dependencies = [
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "black[d]>=26.3.1",
    "mypy>=1.14.0",
    "poethepoet>=0.32.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "pip-audit>=2.6.1",
    "pytest-cov>=6.0.0",
    "deptry>=0.23.0",
    "pip>=25.1.1",
]

[tool.poe.tasks]
depcheck = "deptry ."
format = "black ."
lint = "ruff check"
typecheck = "mypy  --install-types --non-interactive  --explicit-package-bases ."
audit-src = "bandit -r src/* -s B101"
audit-packages = "pip-audit --ignore-vuln GHSA-4xh5-x5gv-qwph"
security = ["audit-src", "audit-packages"]
checks = ["depcheck", "format", "lint", "typecheck", "security"]
unit = "pytest -vv src/*"
integration = "pytest -vv tests/*"
cover = "pytest -vv --cov"
review = "claude 'run code-reviewer agent against diff for quality and elegance'"
commit = "bash -c 'uv run poe checks && uv run poe cover && uv run poe review && git add -A && git cz && git push'"

[tool.coverage.run]
omit = ["*/test_*.py", "tests/*"]
